--- a/shortener-redirect/Cargo.toml
+++ b/shortener-redirect/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "url-shortener"
+name = "shortener-redirect"
 version = "0.1.0"
 authors = ["Jeziel Lago <jeziellago@gmail.com>"]
 edition = "2018"
@@ -7,6 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+redis = "0.20.1"
+log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
 warp = "0.2"
 parking_lot = "0.10.0"
 serde = { version = "1.0", features = ["derive"] }
