--- a/shortener-redirect/Cargo.toml
+++ b/shortener-redirect/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+percent-encoding = "2.1.0"
 redis = "0.20.1"
 log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
 warp = "0.2"
